--- a/contact.css
+++ b/contact.css
@@ -2,16 +2,35 @@
     display: inline-block;
     width: 40px;
     height: 40px;
-    background-size: contain;
+    background-size: 70% 70%;
     background-position: center;
     background-repeat: no-repeat;
     margin: 20px auto;
+    border: solid 2px white;
+    border-radius: 5px;
+    transition: all 1s;
 }
 
 .contact-buttons {
     display: flex;
     justify-content: space-around;
 }
+
+@keyframes scroll {
+    0% {background-position: 20px center;}
+    19% {background-position: 100px center}
+    20%{background-position: 100px -100px}
+    22%{background-position: -100px -100px}
+    50% {background-position: -100px center;}
+    100% {background-position: center;}
+}
+
+.social-icons:hover {
+    animation: scroll .5s;
+    background-color: rgb(241, 180, 52);
+    border-color: rgb(241, 180, 52);
+}
+
 
 .contact-info {
     width: 100%;
