--- a/index/index.css
+++ b/index/index.css
@@ -129,7 +129,7 @@ body {
     }
 }
 
-@media screen and (max-device-width: 700px) {
+@media screen and (max-width: 500px) {
     .nav-wrapper {
         height: 0px;
         top: 90px;
@@ -144,7 +144,28 @@ body {
         width: 100%;
         font-size: 30pt;
         text-align: left;
-        margin: 15px 15px;
+        margin: 10px 15px;
+        border-bottom: solid 1px rgb(241, 180, 52);
+    }
+}
+
+@media screen and (max-device-width: 700px) and (max-width: 500px){
+    .nav-wrapper {
+        height: 0px;
+        top: 90px;
+        transition: all .5s;
+    }
+
+    .visible {
+        height: 300px;
+    }
+
+    .nav-button {
+        width: 100%;
+        font-size: 30pt;
+        text-align: left;
+        margin: 10px 15px;
+        border-bottom: solid 1px rgb(241, 180, 52);
     }
 
 }
