--- a/Carosel/carosel.css
+++ b/Carosel/carosel.css
@@ -8,6 +8,9 @@
 .home-carosel {
     position: relative;
     z-index: -1;
+    width: 100%;
+    height: 100%;
+    background-color: white;
     max-height: 400px;
     max-width: 1000px;
     margin: 90px auto 0px;
@@ -33,9 +36,9 @@
 .carosel-title-one, .carosel-title-two {
     position: absolute;
     z-index: 1;
-    /* left: 40px; */
     width: 90%;
     height: 40px;
+    margin: auto;
     font-size: 40pt;
     font-family: Impact;
     text-align: left;
@@ -44,17 +47,23 @@
 
 .carosel-title-one {
     top: 90px;
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(255, 255, 255, 0.9);
 }
 
 .carosel-title-two {
     top: 140px;
     /* left: 40px; */
-    color: rgba(241, 181, 52, 0.8);
+    color: rgba(241, 181, 52, 0.9);
 }
 
 @media screen and (max-device-width: 700px) {
     .carosel-title-one, .carosel-title-two {
         font-size: 25pt;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .carosel-title-one, .carosel-title-two {
+        left: 25%;
     }
 }
